update openapi && add pagination
