# cardano-connector/module/openapi.yaml
@@ -145,56 +145,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  summary:
-                    type: object
-                    properties:
-                      assetBalances:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            asset:
-                              type: object
-                              description: the information of an asset
-                              properties:
-                                assetId:
-                                  type: string
-                                  description: the ID of asset
-                                  example: "ada"
-                                assetName:
-                                  type: string
-                                  description: the name of asset
-                                  example: "ada"
-                                name:
-                                  type: string
-                                  description: the name of asset
-                                  example: "ada"
-                                description:
-                                  type: string
-                                  description: the description of asset
-                                  example: null
-                                logo:
-                                  type: string
-                                  description: the logo of asset
-                                  example: null
-                                metadataHash:
-                                  type: string
-                                  description: the hash code of metadata for the asset
-                                  example: null
-                                url:
-                                  type: string
-                                  description: the url of asset
-                                  example: null
-                            quantity:
-                              type: string
-                              description: the quantity of asset
-                              example: "20000000000000"
-                      utxosCount:
-                        type: number
-                        description: a number of unspent transaction outputs
-                        example: 1
+                $ref: "#/components/schemas/CardanoAccount"
           description: OK
         500:
           $ref: "#/components/schemas/error500"
@@ -212,6 +163,20 @@ paths:
           description: The address of an account.
           schema:
             $ref: "#/components/schemas/address"
+        - in: query
+          name: pageSize
+          required: true
+          description: The number of items to return.
+          schema:
+            type: number
+            example: 10
+        - in: query
+          name: offset
+          required: true
+          description: Offset to obtain the next page of data.
+          schema:
+            type: number
+            example: 0
       responses:
         200:
           content:
@@ -536,3 +501,54 @@ components:
                 count:
                   description: A number of withdrawals aggregate
                   $ref: "#/components/schemas/count"
+    CardanoAccount:
+      type: object
+      properties:
+        summary:
+          type: object
+          properties:
+            assetBalances:
+              type: array
+              items:
+                type: object
+                properties:
+                  asset:
+                    type: object
+                    description: the information of an asset
+                    properties:
+                      assetId:
+                        type: string
+                        description: the ID of asset
+                        example: "ada"
+                      assetName:
+                        type: string
+                        description: the name of asset
+                        example: "ada"
+                      name:
+                        type: string
+                        description: the name of asset
+                        example: "ada"
+                      description:
+                        type: string
+                        description: the description of asset
+                        example: null
+                      logo:
+                        type: string
+                        description: the logo of asset
+                        example: null
+                      metadataHash:
+                        type: string
+                        description: the hash code of metadata for the asset
+                        example: null
+                      url:
+                        type: string
+                        description: the url of asset
+                        example: null
+                  quantity:
+                    type: string
+                    description: the quantity of asset
+                    example: "20000000000000"
+            utxosCount:
+              type: number
+              description: a number of unspent transaction outputs
+              example: 1
